[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/zylann.channel_packer/dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/zylann.channel_packer/input_texture.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/zylann.channel_packer/output_texture.gd" type="Script" id=3]
[ext_resource path="res://addons/zylann.channel_packer/icons/circle.png" type="Texture" id=4]
[ext_resource path="res://addons/zylann.channel_packer/icons/r.png" type="Texture" id=5]
[ext_resource path="res://addons/zylann.channel_packer/icons/g.png" type="Texture" id=6]
[ext_resource path="res://addons/zylann.channel_packer/icons/b.png" type="Texture" id=7]
[ext_resource path="res://addons/zylann.channel_packer/icons/a.png" type="Texture" id=8]
[ext_resource path="res://addons/zylann.channel_packer/icons/empty.png" type="Texture" id=9]

[node name="ChannelPackerDialog" type="WindowDialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_top = 151.0
margin_right = 525.0
margin_bottom = 526.0
rect_min_size = Vector2( 400, 375 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Channel packer tool"
resizable = false
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 384.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Inputs" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 102.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 8
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Inputs" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 102.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Input textures"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InputTexture0" parent="VBoxContainer/HBoxContainer/Inputs" index="1" instance=ExtResource( 2 )]

margin_top = 22.0
margin_right = 102.0
margin_bottom = 86.0

[node name="InputTexture1" parent="VBoxContainer/HBoxContainer/Inputs" index="2" instance=ExtResource( 2 )]

margin_top = 94.0
margin_right = 102.0
margin_bottom = 158.0

[node name="InputTexture2" parent="VBoxContainer/HBoxContainer/Inputs" index="3" instance=ExtResource( 2 )]

margin_top = 166.0
margin_right = 102.0
margin_bottom = 230.0

[node name="InputTexture3" parent="VBoxContainer/HBoxContainer/Inputs" index="4" instance=ExtResource( 2 )]

margin_top = 238.0
margin_right = 102.0
margin_bottom = 302.0

[node name="Middle" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 118.0
margin_right = 264.0
margin_bottom = 302.0
rect_min_size = Vector2( 16, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="PresetSelector" type="OptionButton" parent="VBoxContainer/HBoxContainer/Middle" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 146.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Custom"
flat = false
align = 0
items = [ "Custom", null, false, 0, null, "RGB + Alpha", null, false, 1, null, "One per channel", null, false, 2, null ]
selected = 0

[node name="Output" type="VBoxContainer" parent="VBoxContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_right = 384.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/Output" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 104.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Output"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/Output" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 104.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Output" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Output/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 104.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 3 )
_sections_unfolded = [ "custom_constants" ]

[node name="Channels" type="GridContainer" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 36.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/vseparation = 0
columns = 2
_sections_unfolded = [ "custom_constants" ]

[node name="R" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="0"]

self_modulate = Color( 1, 0.12549, 0.12549, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Label" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="G" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="2"]

self_modulate = Color( 0.12549, 1, 0.12549, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Label2" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 16.0
margin_right = 36.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="B" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="4"]

self_modulate = Color( 0.376471, 0.376471, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 16.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Label3" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 32.0
margin_right = 36.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="A" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 16.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label4" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output/Channels" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 48.0
margin_right = 36.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0

[node name="OutputTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer/Output/CenterContainer/Output" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 104.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Spacer" type="Control" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 306.0
margin_right = 384.0
margin_bottom = 322.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ButtonsArea" type="HBoxContainer" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 326.0
margin_right = 384.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonsArea" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 86.0
margin_right = 203.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save output as..."
flat = false
align = 1

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonsArea" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 207.0
margin_right = 239.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonsArea" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 243.0
margin_right = 297.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1

[node name="SaveFileDialog" type="FileDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 457.0
margin_top = 11.0
margin_right = 1012.0
margin_bottom = 388.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Save a File"
resizable = true
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 4
access = 0
filters = PoolStringArray( "*.png ; PNG files" )
show_hidden_files = false
current_dir = "res://"
current_file = ""
current_path = "res://"
_sections_unfolded = [ "Rect" ]

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/Middle/PresetSelector" to="." method="_on_PresetSelector_item_selected"]

[connection signal="pressed" from="VBoxContainer/ButtonsArea/SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="pressed" from="VBoxContainer/ButtonsArea/CancelButton" to="." method="_on_CancelButton_pressed"]

[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]


